# discord-cnayp-bots

./: .env.example  .envexample  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  go.mod  pyproject.toml  run.sh
.github/workflows/: deploy.yml
cmd/bot/: main.go
config/: schedules.json
internal/bot/: bot.go
internal/config/: config.go
internal/discord/: client.go  gateway.go  types.go
internal/scheduler/: scheduler.go  scheduler_test.go
src/cnayp_bot/: __init__.py  __main__.py  bot.py  config.py  main.py
src/cnayp_bot/cogs/: __init__.py  scheduler.py
src/cnayp_bot/models/: __init__.py  schedule.py
src/cnayp_bot/services/: __init__.py  calendar.py  webhook.py
tests/: __init__.py  test_models.py
tf/: Makefile  apprunner.tf  artifact-registry.tf  cloud-run.tf  compute-engine.tf  create.tfplan  ecr.tf  github-wif.tf  iam.tf  outputs.tf  provider.tf  secret-manager.tf  secrets.tf  service_account.tf  terraform.tfvars.example  variables.tf  vm.tf
